[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scenes/General/TextInputDialogue.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Icons/White/Folder/open folder_72px.png" type="Texture" id=2]
[ext_resource path="res://src/Ressources/Themes/PopupBackground.tres" type="StyleBox" id=3]
[ext_resource path="res://src/Ressources/Fonts/MidSizedHeader.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="TextInputDialogue" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 310.0
margin_top = 162.0
margin_right = 810.0
margin_bottom = 437.0
rect_min_size = Vector2( 500, 275 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_right = 500.0
margin_bottom = 275.0

[node name="LeftEmpty" type="Control" parent="PanelContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 275.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 482.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopicLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 464.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 4 )
text = "Topic"
valign = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 464.0
margin_bottom = 56.0

[node name="Input" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 464.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="InputEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer/Input"]
margin_right = 464.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="FileDialogue" type="TextureButton" parent="PanelContainer/HBoxContainer/VBoxContainer/Input"]
visible = false
margin_left = 292.0
margin_right = 322.0
margin_bottom = 17.0
rect_min_size = Vector2( 30, 0 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_left = 316.0
margin_top = 88.0
margin_right = 464.0
margin_bottom = 262.0
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="Close" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 144.0
margin_right = 70.0
margin_bottom = 174.0
rect_min_size = Vector2( 70, 30 )
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Close"

[node name="Save" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_top = 144.0
margin_right = 148.0
margin_bottom = 174.0
rect_min_size = Vector2( 70, 30 )
size_flags_horizontal = 8
size_flags_vertical = 10
text = "Save"

[node name="BottomEmpty" type="Control" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 464.0
margin_bottom = 275.0
rect_min_size = Vector2( 10, 5 )

[node name="RightEmpty" type="Control" parent="PanelContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 500.0
margin_bottom = 275.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_Save_pressed"]
